--- a/tasks/ansible_tower_install.yaml
+++ b/tasks/ansible_tower_install.yaml
@@ -1,44 +1,23 @@
 ---
 
-- name: Download latest version of ansble tower
-  get_url:
-    url: "{{ webserver }}/{{ tower_download_file }}"
-    dest: "{{ working_location }}{{ tower_download_file }}"
-    mode: 0740
-
-- name: Untar the tower install
-  unarchive: 
-    src: "{{ working_location }}{{ tower_download_file }}"
-    dest: "{{ working_location }}"
+- name: "[Tower] Download and Extract Tower"
+  unarchive:
+    src: "{{ towerinstall_tower_releases_url }}/{{ towerinstall_tower_setup_file }}"
+    dest: "{{ towerinstall_working_location }}"
     remote_src: yes
+    exclude: "inventory"
+  register: tower_download_extract
 
-- name: update admin password in inventory
-  lineinfile:
-    path: "{{ working_location }}{{ tower_extracted_dir }}/inventory"
-    regexp: "admin_password=''"
-    line: "admin_password='{{admin_password}}'"
-    state: present
+- name: Populate Tower Setup Inventory from Template
+  template:
+    src: inventory.j2
+    dest: "{{ towerinstall_working_location }}/ansible-tower-setup-{{ towerinstall_tower_release_version }}/inventory"
 
-- name: update postgresql password in inventory
-  lineinfile:
-    path: "{{ working_location }}{{ tower_extracted_dir }}/inventory"
-    regexp: "pg_password=''"
-    line: "pg_password='{{pg_password}}'"
-    state: present
-
-- name: update rabbitmq password in inventory
-  lineinfile:
-    path: "{{ working_location }}{{ tower_extracted_dir }}/inventory"
-    regexp: "rabbitmq_password=''"
-    line: "rabbitmq_password='{{rabbitmq_password}}'"
-    state: present
-
-- name: Install Tower 
-  shell: | 
-         export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/root/bin:"{{working_location}}{{tower_extracted_dir}}"
-         cd {{ working_location }}{{ tower_extracted_dir }}/
-         bash ./setup.sh 
+- name: "Run Ansible Tower Setup"
+  become: true
+  shell: ./setup.sh
+  args:
+    chdir: "{{ towerinstall_working_location }}/ansible-tower-setup-{{ towerinstall_tower_release_version }}"
 
 - pause:
-    minutes: 2
-
+    minutes: 1
