--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
 
   # Some suggested licenses:
   # - BSD (default)
-  license: - MIT
+  license: MIT
   # - GPLv2
   # - GPLv3
   # - Apache
